[Bad-37] Corral in row layout
Signed-off-by: Natalie Frecka <natalie.frecka@accenture.com>

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,11 @@ body {
 .App {
     text-align: center;
 }
+
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
